# mkvn-proxy-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  index.html  jobs.json  jobs2.json  load-proxies-guide.md  package-lock.json  package.json  ubuntu_log.txt
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: Single-Instance.md  features.md  load-all-gpm-gpmglobal-profiles-guide.md  manager-donut-api-guide.md  manager-gpmGlobal_api_v1.md  manager-gpmlogin_api_document.md  proxy-mkvn-api-guide.md  update-silent-guide.md
skills/mkvn-proxy-deploy/: SKILL.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  state.rs  updater.rs
src-tauri/src/api/: donut.rs  gpm_global.rs  gpm_standard.rs  mkvn.rs  mod.rs  rate_limiter.rs
src-tauri/src/commands/: data.rs  mod.rs  proxy.rs  settings.rs  sync.rs  update.rs
src-tauri/src/database/: mod.rs  repository.rs  schema.rs
src-tauri/src/managers/: donut.rs  gpm_global.rs  gpm_standard.rs  mod.rs  registry.rs  traits.rs
src-tauri/src/matcher/: engine.rs  mod.rs  parser.rs
src-tauri/src/models/: group.rs  mod.rs  order.rs  product.rs  profile.rs  proxy_row.rs  settings.rs  sync.rs  update.rs
src-tauri/src/services/: mod.rs  proxy_service.rs  settings_service.rs
src-tauri/src/sync/: engine.rs
src/components/: ContextMenu.tsx  FilterHeader.tsx  GroupHeader.tsx  ProxyGrid.tsx  StatusBar.tsx  Toolbar.tsx
src/dialogs/: BuyProxyDialog.tsx  ProgressDialog.tsx  (+3 more)
(+7 files in other folders)
