[package]
name = "mkvn-proxy-manager"
version = "0.2.2"
description = "MKVN Proxy Manager"
authors = ["MKVN Proxy Manager"]
edition = "2021"

[lib]
name = "mkvn_proxy_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "2"
regex = "1"
async-trait = "0.1"
futures = "0.3"
once_cell = "1"
url = "2"
semver = "1"
